syntax = "proto3";
package com.dyptan.ExportService.v1;

import "google/protobuf/struct.proto";
option java_multiple_files = true;
option java_package = "com.dyptan.gen.proto";

service ExportService {
  rpc DoExport (ExportRequest) returns (ExportStatus);
}

message ExportRequest {
  ExportFormat format = 1;
  ExportQuery query = 2;
  string export_name = 3;
  string user = 4;
}

message ExportQuery {
  google.protobuf.Struct filter = 1;
  google.protobuf.Struct projection = 2;
}

message ExportStatus {
  string status = 1;
}

enum ExportFormat {
  JSON = 0;
  CSV = 1;
  PARQUET = 2;
  AVRO = 3;
}